--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -19,7 +19,6 @@
 	}
 	.logo, .color {
     position: absolute;
-    z-index: 200;
     top:0;
     left:0;
     height: 0vh;
@@ -32,6 +31,20 @@
     color:#fff;
     font-size: 40px;
     font-weight: bold;
+    &.active{
+      height:100vh;
+    }
+	}
+  .color{
+    position: absolute !important;
+    width: 100vw;
+    height: 100vh;
+    transform:height;
+    background: none;
+    div {
+      position: fixed;
+      width: 100%;
+    }
     @keyframes rollout {
       0% {
         height: 0vh;
@@ -40,21 +53,38 @@
         height: 100vh;
       }   
     }
-    animation: rollout 1s linear forwards;
-    &.active{
-      height:100vh;
+    @keyframes rolloutLower {
+      0% {
+        height: 100vh;
+        top:0vh;
+      }
+      100% {
+        height: 0vh;
+        top:100vh;
+      }   
     }
-	}
-  .color{
-    position: absolute !important;
-    x:0;
-    y:0;
-    z-index: 199;
-    background: none;
+    &.upper{
+      z-index: 400;
+      top:0;
+      left:0;
+      height:0vh;
+      animation: rollout 1s ease forwards;
+    }
+    &.lower{
+      z-index: 600;
+      bottom:0;
+      left:0;
+      height:100vh;
+      background-color: #fff; 
+      animation: rolloutLower 1s ease forwards;
+    }
   }
   .logo{
     position: fixed;
+    bottom:0;
+    z-index: 500;
     width: 100%;
+    height: 100vh;
     background-size: cover !important;
     background-repeat: no-repeat !important;
     -webkit-background-clip: text !important;
