--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -13,14 +13,14 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 	font-feature-settings: "liga", "kern";
 	overflow-x: hidden;
+	overscroll-behavior-y: none;
 }
 
 html {
 	box-sizing: border-box;
 }
-
 main {
-	margin-top:60px;
+	margin-top:100px;
 }
 ::-webkit-scrollbar {
 	-webkit-appearance: none;
